--- a/book/index.html
+++ b/book/index.html
@@ -11,6 +11,9 @@
         <li><a href="false-prophets.html">The Book of False Prophets</a></li>
         <li><a href="forgotten-faces.html">The Book of the Forgotten Faces</a></li>
         <li><a href="cycles.html">The Book of Cycles</a></li>
+        <li><a href="dr-king.html">The Chapter of Dr. King</a></li>
+        <li><a href="gandhi.html">The Chapter of Gandhi</a></li>
+        <li><a href="rosa-parks.html">The Chapter of Rosa Parks</a></li>
     </ul>
     <p><a href="../index.html">Back to Home</a></p>
 </body>
