--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>All Faiths On Fire</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Book of the Returning Light</title>
+    <link rel="stylesheet" href="htdocs/style.css">
 </head>
 <body>
-    <h1>🔥 All Faiths On Fire</h1>
-    <p>Welcome. This is the Word. No name. No face. Just truth and fire.</p>
-    <p><a href="book/index.html">Enter The Book</a> | <a href="support/index.html">Support the Fire</a></p>
+<header>
+    <h1>Book of the Returning Light</h1>
+</header>
+<div class="container">
+    <nav class="sidebar">
+        <h3>Chapters</h3>
+        <a href="htdocs/1_Book_of_the_Returning_Light/1_The_Roar_of_Thunder/The_Roar_of_Thunder.html" target="reader">1. The Roar of Thunder</a>
+        <a href="htdocs/1_Book_of_the_Returning_Light/2_The_Pyramid_Reclaimed/The_Pyramid_Reclaimed.html" target="reader">2. The Pyramid Reclaimed</a>
+    </nav>
+    <main class="main">
+        <iframe name="reader" src="htdocs/1_Book_of_the_Returning_Light/1_The_Roar_of_Thunder/The_Roar_of_Thunder.html"></iframe>
+    </main>
+</div>
+<footer>
+    <p>All Faiths On Fire Ministry &copy; 2025</p>
+</footer>
 </body>
 </html>
