Layout changes mostly, new chapters

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Book of the Returning Light</title>
     <link rel="stylesheet" href="htdocs/style.css">
+    <script defer src="htdocs/script.js"></script>
 </head>
 <body>
 <header>
@@ -10,9 +11,23 @@
 </header>
 <div class="container">
     <nav class="sidebar">
-        <h3>Chapters</h3>
-        <a href="htdocs/1_Book_of_the_Returning_Light/1_The_Roar_of_Thunder/The_Roar_of_Thunder.html" target="reader">1. The Roar of Thunder</a>
-        <a href="htdocs/1_Book_of_the_Returning_Light/2_The_Pyramid_Reclaimed/The_Pyramid_Reclaimed.html" target="reader">2. The Pyramid Reclaimed</a>
+        <h3>Books</h3>
+        <div>
+            <h4 class="book-toggle">Book of the Returning Light</h4>
+            <div class="chapters" style="display: block;">
+<a href="htdocs/1_Book_of_the_Returning_Light/1_The_Roar_of_Thunder/The_Roar_of_Thunder.html" target="reader">1. The Roar of Thunder</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/2_The_Pyramid_Reclaimed/The_Pyramid_Reclaimed.html" target="reader">2. The Pyramid Reclaimed</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/3_The_Word_Today_Do_Good/The_Word_Today_Do_Good.html" target="reader">3. The Word Today Do Good</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/4_A_Ministry_of_Mending/A_Ministry_of_Mending.html" target="reader">4. A Ministry of Mending</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/5_The_Breach_and_the_Thread/The_Breach_and_the_Thread.html" target="reader">5. The Breach and the Thread</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/6_The_Sermon_of_Eden_Remembered/The_Sermon_of_Eden_Remembered.html" target="reader">6. The Sermon of Eden Remembered</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/7_The_Keeper_of_the_Stories/The_Keeper_of_the_Stories.html" target="reader">7. The Keeper of the Stories</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/8_The_Great_Unlearning/The_Great_Unlearning.html" target="reader">8. The Great Unlearning</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/9_The_Corruption_of_Good_Intentions/The_Corruption_of_Good_Intentions.html" target="reader">9. The Corruption of Good Intentions</a>
+<a href="htdocs/1_Book_of_the_Returning_Light/10_The_Pilgrimage_of_the_Prophet_with_No_Temple/The_Pilgrimage_of_the_Prophet_with_No_Temple.html" target="reader">10. The Pilgrimage of the Prophet with No Temple</a>
+
+            </div>
+        </div>
     </nav>
     <main class="main">
         <iframe name="reader" src="htdocs/1_Book_of_the_Returning_Light/1_The_Roar_of_Thunder/The_Roar_of_Thunder.html"></iframe>
