A rough draft waiting for completion

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Faiths On Fire</title>
-    <link rel="stylesheet" href="style/default.css" id="theme-link">
-    <script src="style/theme.js" defer></script>
+    <link rel="stylesheet" href="css/default.css">
+    <script src="js/theme.js" defer></script>
+    <script src="js/reader.js" defer></script>
+    </script>
 </head>
 
 <body class="theme-dark">
@@ -17,29 +19,127 @@
                 <li>
                     <button class="book-toggle">The Returning Light</button>
                     <ul class="chapter-list">
-                        <li><a href="#" data-path="bible/1_The_Returning_Light/1_The_Pyramid_Reclaimed/chapter.html">The Pyramid Reclaimed</a></li>
-                        <li><a href="#" data-path="bible/1_The_Returning_Light/2_The_Pilgrimage_of_the_Prophet/chapter.html">The Pilgrimage</a></li>
-                        <li><a href="#" data-path="bible/1_The_Returning_Light/3_When_Stories_Saved_Me/chapter.html">When Stories Saved Me</a></li>
-                        <li><a href="#" data-path="bible/1_The_Returning_Light/4_The_Army_That_Rises/chapter.html">The Army That Rises</a></li>
+                        <li><a href="#" data-path="bible/1_The_Returning_Light/1_The_Pyramid_Reclaimed/chapter.html">The
+                                Pyramid Reclaimed</a></li>
+                        <li><a href="#"
+                                data-path="bible/1_The_Returning_Light/2_The_Pilgrimage_of_the_Prophet/chapter.html">The
+                                Pilgrimage of the Prophet</a></li>
+                        <li><a href="#"
+                                data-path="bible/1_The_Returning_Light/3_When_Stories_Saved_Me/chapter.html">When
+                                Stories Saved Me</a></li>
+                        <li><a href="#" data-path="bible/1_The_Returning_Light/4_The_Army_That_Rises/chapter.html">The
+                                Army That Rises</a></li>
+                        <li><a href="#" data-path="bible/1_The_Returning_Light/5_The_Voice_in_the_Dust/chapter.html">The
+                                Voice in the Dust</a></li>
+                        <li><a href="#" data-path="bible/1_The_Returning_Light/6_Every_Faith_is_Fire/chapter.html">Every
+                                Faith is Fire</a></li>
+                        <li><a href="#" data-path="bible/1_The_Returning_Light/7_The_Returning_Light/chapter.html">The
+                                Returning Light</a></li>
                     </ul>
                 </li>
                 <li>
                     <button class="book-toggle">Songs of the Walkers</button>
                     <ul class="chapter-list">
-                        <li><a href="#" data-path="bible/2_Songs_Of_The_Walkers/1_Stranger_With_Cash/chapter.html">The Pyramid Reclaimed</a></li>
-                        <li><a href="#" data-path="bible/2_Songs_Of_The_Walkers/2_The_Good_Cop/chapter.html">The Pilgrimage</a></li>
-                        <li><a href="#" data-path="bible/2_Songs_Of_The_Walkers/3_The_Wayfarer_Veteran/chapter.html">When Stories Saved Me</a></li>
-                        <li><a href="#" data-path="bible/2_Songs_Of_The_Walkers/4_The_House_of_Safety/chapter.html">The Army That Rises</a></li>
+                        <li><a href="#"
+                                data-path="bible/2_Songs_Of_The_Walkers/1_Stranger_With_Cash/chapter.html">Stranger With
+                                Cash</a></li>
+                        <li><a href="#" data-path="bible/2_Songs_Of_The_Walkers/2_The_Good_Cop/chapter.html">The Good
+                                Cop</a></li>
+                        <li><a href="#" data-path="bible/2_Songs_Of_The_Walkers/3_The_Wayfarer_Veteran/chapter.html">The
+                                Wayfarer Veteran</a></li>
+                        <li><a href="#" data-path="bible/2_Songs_Of_The_Walkers/4_The_House_of_Safety/chapter.html">The
+                                House of Safety</a></li>
+                        <li><a href="#"
+                                data-path="bible/2_Songs_Of_The_Walkers/5_The_Ones_Who_Watched_and_Wept/chapter.html">The
+                                Ones Who Watched and Wept</a></li>
+                        <li><a href="#"
+                                data-path="bible/2_Songs_Of_The_Walkers/6_Sister_of_the_Storm/chapter.html">Sister of
+                                the Storm</a></li>
+                        <li><a href="#"
+                                data-path="bible/2_Songs_Of_The_Walkers/7_Saints_of_the_Sidewalk/chapter.html">Saints of
+                                the Sidewalk</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <button class="book-toggle">Ash and Oil</button>
+                    <ul class="chapter-list">
+                        <li><a href="#" data-path="bible/3_Ash_and_Oil/1_Born_to_Burn/chapter.html">Born to Burn</a>
+                        </li>
+                        <li><a href="#"
+                                data-path="bible/3_Ash_and_Oil/2_Warfare_in_Uniform_and_Out/chapter.html">Warfare in
+                                Uniform and Out</a></li>
+                        <li><a href="#" data-path="bible/3_Ash_and_Oil/3_Chains_of_the_System/chapter.html">Chains of
+                                the System</a></li>
+                        <li><a href="#" data-path="bible/3_Ash_and_Oil/4_The_Day_I_Chose_Fury/chapter.html">The Day I
+                                Chose Fury</a></li>
+                        <li><a href="#" data-path="bible/3_Ash_and_Oil/5_Lovers_and_Ghosts/chapter.html">Lovers and
+                                Ghosts</a></li>
+                        <li><a href="#" data-path="bible/3_Ash_and_Oil/6_Speaking_the_Unspoken/chapter.html">Speaking
+                                the Unspoken</a></li>
+                        <li><a href="#" data-path="bible/3_Ash_and_Oil/7_Waking_the_Giant/chapter.html">Waking the
+                                Giant</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <button class="book-toggle">The Book Yet to Come</button>
+                    <ul class="chapter-list">
+                        <li><a href="#" data-path="bible/4_The_Book_Yet_to_Come/1_The_Temple_of_Lies/chapter.html">The
+                                Temple of Lies</a></li>
+                        <li><a href="#" data-path="bible/4_The_Book_Yet_to_Come/2_The_Great_Deceiver/chapter.html">The
+                                Great Deceiver</a></li>
+                        <li><a href="#"
+                                data-path="bible/4_The_Book_Yet_to_Come/3_The_Bastions_of_Light/chapter.html">The
+                                Bastions of Light</a></li>
+                        <li><a href="#" data-path="bible/4_The_Book_Yet_to_Come/4_The_Final_Exodus/chapter.html">The
+                                Final Exodus</a></li>
+                        <li><a href="#" data-path="bible/4_The_Book_Yet_to_Come/5_The_New_Commandments/chapter.html">The
+                                New Commandments</a></li>
+                        <li><a href="#"
+                                data-path="bible/4_The_Book_Yet_to_Come/6_The_Judgement_of_Giants/chapter.html">The
+                                Judgement of Giants</a></li>
+                        <li><a href="#" data-path="bible/4_The_Book_Yet_to_Come/7_The_Fire_Next_Time/chapter.html">The
+                                Fire Next Time</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <button class="book-toggle">Gods Among Us</button>
+                    <ul class="chapter-list">
+                        <li><a href="#" data-path="bible/5_Gods_Among_Us/1_Eden_Was_Never_Closed/chapter.html">Eden Was
+                                Never Closed</a></li>
+                        <li><a href="#" data-path="bible/5_Gods_Among_Us/2_The_Devil_You_Need/chapter.html">The Devil
+                                You Need</a></li>
+                        <li><a href="#" data-path="bible/5_Gods_Among_Us/3_Echoes_of_the_Christ/chapter.html">Echoes of
+                                the Christ</a></li>
+                        <li><a href="#" data-path="bible/5_Gods_Among_Us/4_The_Holy_Schism/chapter.html">The Holy
+                                Schism</a></li>
+                        <li><a href="#" data-path="bible/5_Gods_Among_Us/5_Dreams_of_the_Dead/chapter.html">Dreams of
+                                the Dead</a></li>
+                        <li><a href="#" data-path="bible/5_Gods_Among_Us/6_What_Hell_Was_For/chapter.html">What Hell Was
+                                For</a></li>
+                        <li><a href="#" data-path="bible/5_Gods_Among_Us/7_Be_Not_Afraid/chapter.html">Be Not Afraid</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
         </nav>
 
+
         <main id="content">
-            <div id="reading-pane">Select a chapter to begin reading.</div>
+            <div id="reading-pane">
+                <article class="forward">
+                    <h1>Welcome to All Faiths On Fire</h1>
+                    <p>This is the sacred text of the Returning Light, Songs of the Walkers, and many voices yet to
+                        come.</p>
+                    <p>To begin your reading, select a chapter from the sidebar. Each one is a fire — a testimony, a
+                        memory, a promise.</p>
+                    <p>Let your heart burn kindly. Let the stories find you.</p>
+                </article>
+                Select a chapter to begin reading.
+            </div>
             <footer id="footer">
-                <p>Support the mission: 
-                    <a href="https://www.gofundme.com/manage/a-veteran-standing-up-for-those-still-serving-veterans" target="_blank">GoFundMe</a>
+                <p>Support the mission:
+                    <a href="https://www.gofundme.com/manage/a-veteran-standing-up-for-those-still-serving-veterans"
+                        target="_blank">GoFundMe</a>
                 </p>
                 <p>&copy; All Faiths On Fire – A Ministry of Light and Action</p>
             </footer>
@@ -69,6 +169,8 @@
             });
         });
     </script>
+
+    </div>
 </body>
 
 </html>
